// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO fkRVkS"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO jCEdvN"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO lpeIbL"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO hZKvA"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO ggKQOH"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO crqVkl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO fkRVkS"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO jCEdvN"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO lpeIbL"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO fkRVkS"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO jCEdvN"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO lpeIbL"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO fkRVkS"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO jCEdvN"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO lpeIbL"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO fkRVkS"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk keorQY"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO jCEdvN"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk keorQY"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO lpeIbL"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-gbFqDM jHsxVm"
        >
          xlarge
        </label>
        <div
          className="sc-gZRyEk keorQY"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO fkRVkS"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO jCEdvN"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO gYSSJK"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO gThKXd"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <div
        className="sc-jjavrh ctYLfW"
      >
        <input
          className="sc-jSPclO iONtcW"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh kXEagA"
      >
        <input
          className="sc-jSPclO lpeIbL"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
        <div
          className="sc-gZRyEk JBciX"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
